# duckdb-address-standardizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
addrust-ffi/: Cargo.toml
addrust-ffi/include/: addrust_ffi.h
addrust-ffi/src/: lib.rs
benchmark/: 00_setup_pg.sh  01_setup_duckdb.sh  02_load_data.sh  03_verify.sh  04_bench_pg.sh  05_bench_duckdb.sh  06_export_and_compare.sh  07_recheck_diffs.sh  README.md  config.sh
benchmark/addrust/: 01_setup.sh  02_bench_cli.sh  03_bench_extension.sh  04_compare.sh  README.md  config_short_suffix.toml
benchmark/postgis/: 00_setup_pg.sh  01_setup_duckdb.sh  02_load_data.sh  03_verify.sh  04_bench_pg.sh  05_bench_duckdb.sh  06_export_and_compare.sh  07_recheck_diffs.sh
data/: us_gaz.sql  us_lex.sql  us_rules.sql
scripts/: generate_data_headers.py
src/: address_standardizer_duckdb.c  addrust_parse_duckdb.c  debug_standardize_address_duckdb.c  duckdb_entry.c  load_us_data_duckdb.c  parseaddress_duckdb.c
src/include/: address_standardizer_duckdb.h  postgres.h
test/sql/: address_standardizer.test  addrust_parse.test  addrust_parse_golden.test  debug_standardize_address.test  load_us_address_data.test  standardize_address.test
